frontend/test/should_fail/index_asArrayAscending_edge_missing_where_index_expected.grg
rule i(ref s:array<Edge>) {
	if{ edgesFromIndexAsArrayAscending(s).size() > 0; }
	
	modify {
	}
}
